Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <h3>Manicure & Pedicure</h3>
                     <ul class="service-list">
                         <li><a href="#booking" class="service-link" data-service="Basic Manicure - ₹400">Basic Manicure - ₹400</a></li>
-                        <li><a href="#booking" class="service-link" data-service="Basic Pedicure - ₹799">Basic Pedicure - ₹799</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Basic Pedicure - ₹799">Basic Pedicure - ₹799-₹2499</a></li>
                         <li><a href="#booking" class="service-link" data-service="Spa Manicure - ₹600">Spa Manicure - ₹600</a></li>
                         <li><a href="#booking" class="service-link" data-service="Spa Pedicure - ₹1000">Spa Pedicure - ₹1000</a></li>
                     </ul>
@@ -659,3 +659,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
