--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
                         <li><a href="#booking" class="service-link" data-service="Brightening Facial - ₹1299">Brightening Facial - ₹1299</a></li>
                         <li><a href="#booking" class="service-link" data-service="Vitamin-C Facial - ₹1000-3000">Vitamin-C Facial - ₹1000-3000</a></li>
                         <li><a href="#booking" class="service-link" data-service="Luxury Facial - ₹4999">Luxury Facial - ₹4999</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Ragaa professional facial - ₹1100">Ragaa professional facial - ₹1100</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Ragaa Derma bleach facial - ₹700">Ragaa Derma bleach facial - ₹700</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Jovees herbal facial - ₹700">Jovees herbal facial - ₹700</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Lotus golden facial - ₹900">Lotus golden facial - ₹900</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Lotus organic - ₹1250">Lotus organic - ₹1250</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Vlcc Facial - ₹1000 ">Vlcc Facial - ₹1000 </a></li>
+                        <li><a href="#booking" class="service-link" data-service="O3+ Brightening facial - ₹2000">O3+ Brightening facial - ₹2000</a></li>
+                        <li><a href="#booking" class="service-link" data-service="O3+ bridal facial- ₹3000">O3+ bridal facial- ₹3000</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Lalossa jewell facial- ₹2500">Lalossa jewell facial- ₹2500</a></li>
+                        <li><a href="#booking" class="service-link" data-service="Aroma magic facial - ₹1450">Aroma magic facial - ₹1450</a></li>
                     </ul>
                 </div>
             </div>
@@ -659,4 +669,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
