--- a/index.html
+++ b/index.html
@@ -50,6 +50,74 @@
         </div>
     </section>
 
+        <!-- Valentine's Simple Special -->
+    <section class="valentine-simple">
+        <div class="container">
+            <div class="simple-card">
+                <!-- Header -->
+                <div class="simple-header">
+                    <h2>Valentine's Week Special</h2>
+                    <p class="subheading">Experience Luxury Beauty</p>
+                </div>
+
+                <!-- Offer -->
+                <div class="offer-section">
+                    <div class="offer-main">
+                        <div class="price-box">
+                            <span class="currency">₹</span>
+                            <span class="price">1999</span>
+                            <span class="plus">+</span>
+                        </div>
+                        <div class="offer-details">
+                            <div class="free-tag">FREE</div>
+                            <h3>Get Complimentary Waxing</h3>
+                            <p class="offer-choice">Choose: Half Leg or Full Hand</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Duration -->
+                <div class="duration">
+                    <p class="duration-text">
+                        <i class="far fa-clock"></i>
+                        Valid from 7th to 14th February 2024
+                    </p>
+                </div>
+
+                <!-- Action Buttons -->
+                <div class="action-buttons">
+                    <a href="#booking" class="book-btn">
+                        <i class="far fa-calendar-check"></i>
+                        Book Your Treatment
+                    </a>
+                    
+                    <div class="contact-buttons">
+                        <a href="tel:9348277689" class="call-btn">
+                            <i class="fas fa-phone"></i>
+                            Call: 9348277689
+                        </a>
+                        <a href="https://wa.me/919348277689" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i>
+                            WhatsApp
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Location & Validity -->
+                <div class="details-section">
+                    <div class="location">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Kalinga Nagar, 3rd Lane, Khodasing</p>
+                    </div>
+                    <div class="validity">
+                        <i class="far fa-calendar-alt"></i>
+                        <p>Offer valid until 14th February 2024</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- About Section -->
     <section class="about" id="about">
         <div class="container">
@@ -669,5 +737,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
