Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -735,8 +735,20 @@
     </div>
 
     <script src="script.js"></script>
+
+    <!-- Simple Image Popup -->
+<div class="image-popup" id="imagePopup">
+    <div class="image-popup-content">
+        <button class="image-popup-close" id="imagePopupClose">
+            <i class="fas fa-times"></i>
+        </button>
+        <img src="valentineweek.jpeg" alt="Valentine Special Offer" class="popup-ad-image">
+    </div>
+</div>
+
 </body>
 </html>
+
 
 
 
